# vitality-engagement-intelligence

./: README.md  pyproject.toml
docs/: activation_policy.md  data_generation_spec.md
scripts/: run_bigquery_sql.ps1
sql/features/: 01_create_engagement_features_28d.sql
sql/splits/: 01_create_chronological_modeling_split.sql
sql/staging/: 01_create_engagement_staging.sql
sql/tests/: 01_assert_engagement_staging.sql  02_assert_engagement_features_28d.sql  03_assert_chronological_modeling_split.sql
src/vitality_engagement/activation/: __init__.py  artifact.py  cli.py  context_artifact.py  engine.py  policy.py  review_queue.py  schema.py
src/vitality_engagement/data/: data_quality.py  generate_engagement.py  generate_members.py  goal_metrics.py  schema.py
src/vitality_engagement/models/: baseline.py  export_features.py  model_choice.py
tests/unit/: test_activation_artifact.py  test_activation_cli.py  test_activation_context_artifact.py  test_activation_engine.py  test_activation_policy.py  test_activation_review_queue.py  test_activation_schema.py  test_activation_warehouse.py  test_data_quality.py  test_generate_daily_engagement.py  test_generate_engagement.py  test_generate_members.py  test_goal_metrics.py  test_model_baseline.py  test_model_choice.py  test_model_export.py  test_model_predict.py
