[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vitality-engagement-intelligence"
version = "0.1.0"
description = "An end-to-end engagement-risk prediction and behavioural intervention system."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "google-cloud-bigquery>=3.42,<4",
    "numpy>=2.3,<3",
    "pandas>=2.3,<4",
    "pyarrow",
    "pydantic>=2.11,<3",
    "scikit-learn>=1.9,<2",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.6,<5",
    "mypy>=2.3,<3",
    "pandas-stubs",
    "pre-commit>=4.6,<5",
    "pytest>=9.1,<10",
    "ruff>=0.15,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vitality_engagement"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true
